[gd_scene load_steps=7 format=3 uid="uid://cpkdjcp5lcxe"]

[ext_resource type="Script" uid="uid://cltc831160c57" path="res://script/pipe.gd" id="1_78010"]
[ext_resource type="Texture2D" uid="uid://bvk5jcpk433v2" path="res://sprite/pipe.png" id="1_bepn3"]
[ext_resource type="AudioStream" uid="uid://e44f00ph5aem" path="res://sounds/power down.wav" id="3_8p0di"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bepn3"]
size = Vector2(20, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arayy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arpqm"]
size = Vector2(3.975852, 63)

[node name="pipe" type="Node2D"]
position = Vector2(43, 73)
script = ExtResource("1_78010")

[node name="Pipe" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(0, -32)
texture = ExtResource("1_bepn3")
hframes = 2

[node name="pipe_enter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe_enter"]
position = Vector2(0, -61)
shape = SubResource("RectangleShape2D_bepn3")

[node name="top_block" type="StaticBody2D" parent="."]
collision_layer = 131
collision_mask = 131

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_block"]
position = Vector2(0, -53)
scale = Vector2(1.4, 1)
shape = SubResource("RectangleShape2D_arayy")

[node name="alwaystop_block" type="StaticBody2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="alwaystop_block"]
position = Vector2(0, -54)
scale = Vector2(1.6399993, 1)
shape = SubResource("RectangleShape2D_arayy")

[node name="PowerDown" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-6, 3.5)
stream = ExtResource("3_8p0di")
volume_db = 9.0

[node name="brick" type="StaticBody2D" parent="."]
collision_layer = 135
collision_mask = 135

[node name="CollisionShape2D" type="CollisionShape2D" parent="brick"]
position = Vector2(-14, -31)
scale = Vector2(0.88, 1)
shape = SubResource("RectangleShape2D_arpqm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="brick"]
position = Vector2(14, -30)
scale = Vector2(0.880001, 1)
shape = SubResource("RectangleShape2D_arpqm")

[connection signal="area_entered" from="pipe_enter" to="." method="_on_enter_pipe_area_entered"]
